--- a/src/style.css
+++ b/src/style.css
@@ -19,10 +19,70 @@ html, body {
 }
 
 .nav{
-  height: 8vh;
   background-color: #24242464;
 }
 
 .blur{
   backdrop-filter: blur(8px);
+}
+
+.center{
+  text-align: center;
+}
+
+.verticalCenter{
+  position: relative;
+  top: 30%;
+  left: 30%;
+  -webkit-transform: translate(-30%, -30%);
+  transform: translate(-30%, -30%);
+}
+
+.blurBackground { 
+  background-color: rgba(24, 28, 37, 0.691);
+  backdrop-filter: blur(8px);
+}
+
+#Name{
+  font-weight: bold;
+  color: hsl(15, 90%, 60%);
+  font-size: 2em;
+}
+
+.ScrollContainer {
+  align-items: center;
+  overflow: hidden;
+}
+
+.scroll {
+  white-space: nowrap;
+  margin: 0 2em;
+}
+
+.scroll div {
+  display: flex;
+  gap: 1em;
+}
+
+.scroll p {
+  font-size: 1em;
+  
+  color: white;
+  font-weight: bold;
+  margin-bottom: 0;
+  line-height: 1em;
+}
+
+.RightToLeft {
+  animation: RightToLeft 20s infinite linear;
+  width: fit-content;
+}
+
+@keyframes  RightToLeft {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-50.5%);
+  }
 }
