--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ html, body {
   margin: 0;
   height: 100%;
   max-width: 100vw; 
-  overflow-x: hidden;
+  overflow-x: clip;
   overscroll-behavior: none;
 }
 
