--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,11 @@ html, body {
   overscroll-behavior: none;
 }
 
+iframe {
+  margin: 0 auto;
+  display: block;
+}
+
 .nav{
   background-color: #24242464;
 }
@@ -42,23 +47,26 @@ html, body {
 }
 
 article{
-  background-color: #24242464;
+  background-color: hsl(220, 7%, 15%);
 }
 
 .background-div {
   position: absolute;
   background-color: hsl(220, 24%, 5%);
-  height: 100%;
+  height: 80%;
   width: 100vw;
   left: 50%;
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
+  z-index: -10;
 }
 
 
 #introCard{
   padding: 1em;
+  margin-left: -5vw;
+  margin-right: -5vw;
   background-color: #24242455;
   backdrop-filter: blur(6px);
 }
