--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,11 @@ iframe {
   text-align: center;
 }
 
+.centerElement{
+  display: block;
+  margin: 0 auto;
+}
+
 .verticalCenter{
   position: relative;
   top: 30%;
