--- a/src/style.css
+++ b/src/style.css
@@ -52,10 +52,10 @@ model-viewer {
 
 .verticalCenter {
   position: relative;
-  top: 30%;
-  left: 30%;
-  -webkit-transform: translate(-30%, -30%);
-  transform: translate(-30%, -30%);
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 article {
@@ -140,6 +140,7 @@ footer {
   left: 50%;
   margin-left: -30px;
   bottom: -30vh;
+  translate: 0 15vh;
 }
 
 .arrows path {
